--- a/PolyclinicApp.WPF/App.xaml
+++ b/PolyclinicApp.WPF/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application x:Class="PolyclinicApp.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -20,18 +20,17 @@
                                                 UpdateSourceTrigger=PropertyChanged}"
                                          x:Name="textSource"
                                          Background="Transparent"
-                                         Panel.ZIndex="2" 
-                                         />
+                                         Panel.ZIndex="2" />
                                 <TextBox Text="{TemplateBinding Tag}" IsEnabled="False"
-                                         Background="{TemplateBinding Background}" 
+                                         Background="{TemplateBinding Background}"
                                          Panel.ZIndex="1" BorderBrush="Transparent">
                                     <TextBox.Style>
                                         <Style TargetType="{x:Type TextBox}">
-                                            <Setter Property="Foreground" Value="Transparent"/>
+                                            <Setter Property="Foreground" Value="Transparent" />
                                             <Style.Triggers>
                                                 <DataTrigger Binding="{Binding Path=Text, Source={x:Reference textSource}}" Value="">
-                                                    <Setter Property="Foreground" Value="LightGray"/>
-                                                    <Setter Property="IsReadOnly" Value="True"/>
+                                                    <Setter Property="Foreground" Value="LightGray" />
+                                                    <Setter Property="IsReadOnly" Value="True" />
                                                 </DataTrigger>
                                             </Style.Triggers>
                                         </Style>
