--- a/PolyclinicApp.WPF/Views/UserControls/InformationView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/InformationView.xaml
@@ -5,8 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:PolyclinicApp.WPF.Views.UserControls"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
-    <Grid>
-            <TextBlock Text="appointment" />
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="800">
+    <StackPanel>
+        <DataGrid AutoGenerateColumns="False" ColumnWidth="Auto" ItemsSource="{Binding OrdersTable}" IsReadOnly="True">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Пациент" Binding="{Binding Patient.FullName}"/>
+                <DataGridTextColumn Header="Лечащий врач" Binding="{Binding Doctor.FullName}"/>
+                <DataGridTextColumn Header="Жалоба" Binding="{Binding Disease}"/>
+                <DataGridTextColumn Header="Время приёма" Binding="{Binding DateOfDiagnosis}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+    </StackPanel>
 </UserControl>
