--- a/PolyclinicApp.WPF/Views/UserControls/LoginView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/LoginView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:navigation="clr-namespace:PolyclinicApp.WPF.Stores.Navigation"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800" Background="White">
+             d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Margin="100">
         <Label Content="Вход" HorizontalAlignment="Center" FontSize="30" FontWeight="Bold" />
         <TextBlock HorizontalAlignment="Center" Foreground="Red" DataContext="{Binding MessageViewModel}" Text="{Binding Message}" />
