--- a/PolyclinicApp.WPF/Views/Windows/MainWindow.xaml
+++ b/PolyclinicApp.WPF/Views/Windows/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:PolyclinicApp.WPF.ViewModels"
         xmlns:userControls="clr-namespace:PolyclinicApp.WPF.Views.UserControls"
         mc:Ignorable="d"
-        Height="450" Width="800" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Height="500" Width="800" WindowStyle="ToolWindow" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <DataTemplate DataType="{x:Type vm:LoginViewModel}">
             <userControls:LoginView />
@@ -15,17 +15,26 @@
         <DataTemplate DataType="{x:Type vm:InformationViewModel}">
             <userControls:InformationView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:NewAppointmentViewModel}">
+            <userControls:NewAppointmentView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:NewPatientViewModel}">
+            <userControls:NewPatientView />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type vm:DoctorsScheduleViewModel}">
+            <userControls:DoctorsScheduleView />
+        </DataTemplate>
     </Window.Resources>
     <StackPanel>
         <StackPanel Orientation="Horizontal"  Height="50">
-            <Button Width="140" Height="40" Content="Новый пациент" Margin="10 0 0 0" />
-            <Button Width="140" Height="40" Content="Новая запись" Margin="10 0 0 0" />
+            <Button Width="140" Height="40" Content="Новый пациент" Style="{StaticResource MaterialDesignOutlinedButton}" Margin="10 0 0 0" Command="{Binding NewPatientCommand}"/>
+            <Button Width="140" Height="40" Content="Новая запись" Style="{StaticResource MaterialDesignOutlinedButton}" Margin="10 0 0 0" Command="{Binding NewAppointmentCommand}"/>
             <Button Width="140" Height="30" Content="Расписание врачей" FontSize="10" Margin="210 0 0 0"
-                    Style="{StaticResource MaterialDesignFlatButton}" />
-            <Button Width="120" Height="30" Content="Выйти и закрыть" Margin="20 0 0 0"
-                    Background="Red" FontSize="10" Command="{Binding CloseCommand}" />
+                    Style="{StaticResource MaterialDesignFlatButton}" Command="{Binding DoctorsScheduleCommand}"/>
+            <Button Width="120" Height="30" Content="Выйти и закрыть" Margin="10 0 0 0"
+                    Background="Red" BorderBrush="Red" FontSize="10" Command="{Binding CloseCommand}" />
         </StackPanel>
-        <Line StrokeThickness="2" Stroke="Black" X1="800" />
+        <Line StrokeThickness="1" Stroke="LightSlateGray" X1="800" />
         <ContentControl Content="{Binding CurrentViewModel}" Height="400" />
     </StackPanel>
 </Window>
