--- a/PolyclinicApp.WPF/App.xaml
+++ b/PolyclinicApp.WPF/App.xaml
@@ -9,7 +9,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <Style x:Key="placeHolder" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
+            <Style x:Key="TextBoxPlaceHolder" TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type TextBox}">
@@ -20,10 +20,43 @@
                                                 UpdateSourceTrigger=PropertyChanged}"
                                          x:Name="textSource"
                                          Background="Transparent"
-                                         Panel.ZIndex="2" />
+                                         Panel.ZIndex="2" IsTabStop="False"/>
                                 <TextBox Text="{TemplateBinding Tag}" IsEnabled="False"
                                          Background="{TemplateBinding Background}"
-                                         Panel.ZIndex="1" BorderBrush="Transparent">
+                                         Panel.ZIndex="1" BorderBrush="Transparent"
+                                         IsTabStop="False">
+                                    <TextBox.Style>
+                                        <Style TargetType="{x:Type TextBox}">
+                                            <Setter Property="Foreground" Value="Transparent" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Path=Text, Source={x:Reference textSource}}" Value="">
+                                                    <Setter Property="Foreground" Value="LightGray" />
+                                                    <Setter Property="IsReadOnly" Value="True" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBox.Style>
+                                </TextBox>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="DatePickerPlaceHolder" TargetType="{x:Type DatePicker}" BasedOn="{StaticResource {x:Type DatePicker}}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type DatePicker}">
+                            <Grid>
+                                <DatePicker Text="{Binding Path=Text,
+                                                RelativeSource={RelativeSource TemplatedParent},
+                                                Mode=TwoWay,
+                                                UpdateSourceTrigger=PropertyChanged}"
+                                         x:Name="textSource"
+                                         Background="Transparent"
+                                         Panel.ZIndex="2" IsTabStop="False"/>
+                                <TextBox Text="{TemplateBinding Tag}" IsEnabled="False"
+                                         Background="{TemplateBinding Background}"
+                                         Panel.ZIndex="1" BorderBrush="Transparent" IsTabStop="False">
                                     <TextBox.Style>
                                         <Style TargetType="{x:Type TextBox}">
                                             <Setter Property="Foreground" Value="Transparent" />
