--- a/PolyclinicApp.WPF/Views/UserControls/LoginView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/LoginView.xaml
@@ -10,13 +10,13 @@
         <Label Content="Вход" HorizontalAlignment="Center" FontSize="30" FontWeight="Bold" />
         <TextBlock HorizontalAlignment="Center" Foreground="Red" DataContext="{Binding MessageViewModel}" Text="{Binding Message}" />
         <TextBox HorizontalAlignment="Center" Width="200" Margin="0 10 0 0"
-                 Style="{StaticResource placeHolder}" Tag="Логин" Text="{Binding Login}">
+                 Style="{StaticResource TextBoxPlaceHolder}" Tag="Логин" Text="{Binding Login}" >
             <TextBox.InputBindings>
                 <KeyBinding Key="Enter" Command="{Binding LogInCommand}" />
             </TextBox.InputBindings>
         </TextBox>
         <TextBox HorizontalAlignment="Center" Width="200" Margin="0 10 0 0"
-                 Style="{StaticResource placeHolder}" Tag="Пароль" Text="{Binding Password}">
+                 Style="{StaticResource TextBoxPlaceHolder}" Tag="Пароль" Text="{Binding Password}">
             <TextBox.InputBindings>
                 <KeyBinding Key="Enter" Command="{Binding LogInCommand}" />
             </TextBox.InputBindings>
