--- a/PolyclinicApp.WPF/Views/UserControls/NewPatientView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/NewPatientView.xaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels="clr-namespace:PolyclinicApp.WPF.ViewModels"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid>
@@ -49,6 +50,6 @@
             </StackPanel>
         </StackPanel>
         <Button Content="Создать" Grid.ColumnSpan="2" Grid.Column="0" Width="100" />
-        <Button Content="Назад" Grid.ColumnSpan="2" Grid.Column="0" Width="100" Margin="0 100 0 0" Style="{StaticResource MaterialDesignFlatButton}"/>
+        <Button Content="Назад" Grid.ColumnSpan="2" Grid.Column="0" Width="100" Margin="0 100 0 0" Style="{StaticResource MaterialDesignFlatButton}" Command="{Binding InformationViewCommand}"/>
     </Grid>
 </UserControl>
