--- a/PolyclinicApp.WPF/Views/UserControls/DoctorsScheduleView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/DoctorsScheduleView.xaml
@@ -7,16 +7,16 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <DataGrid AutoGenerateColumns="False" ColumnWidth="*" ItemsSource="{Binding ScheduleTable}">
+        <DataGrid AutoGenerateColumns="False" ColumnWidth="Auto" ItemsSource="{Binding ScheduleTable}" FontSize="10" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Врач" Binding="{Binding Doctor.FullName}"/>
-                <DataGridTextColumn Header="Понедельник" Binding="{Binding Schedule.Monday}"/>
-                <DataGridTextColumn Header="Вторник" Binding="{Binding Schedule.Tuesday}"/>
-                <DataGridTextColumn Header="Среда" Binding="{Binding Schedule.Wednesday}"/>
-                <DataGridTextColumn Header="Четверг" Binding="{Binding Schedule.Thursday}"/>
-                <DataGridTextColumn Header="Пятница" Binding="{Binding Schedule.Friday}"/>
-                <DataGridTextColumn Header="Суббота" Binding="{Binding Schedule.Saturday}"/>
-                <DataGridTextColumn Header="Воскресенье" Binding="{Binding Schedule.Sunday}"/>
+                <DataGridTextColumn Header="ПН" Binding="{Binding Monday}"/>
+                <DataGridTextColumn Header="ВТ" Binding="{Binding Tuesday}"/>
+                <DataGridTextColumn Header="СР" Binding="{Binding Wednesday}"/>
+                <DataGridTextColumn Header="ЧТ" Binding="{Binding Thursday}"/>
+                <DataGridTextColumn Header="ПТ" Binding="{Binding Friday}"/>
+                <DataGridTextColumn Header="СБ" Binding="{Binding Saturday}"/>
+                <DataGridTextColumn Header="ВС" Binding="{Binding Sunday}"/>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
