--- a/PolyclinicApp.WPF/Views/UserControls/NewPatientView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/NewPatientView.xaml
@@ -49,7 +49,7 @@
                 <TextBox Width="200" Style="{StaticResource TextBoxPlaceHolder}" Tag="СНИЛС" Text="{Binding Iipan}"/>
             </StackPanel>
         </StackPanel>
-        <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" Grid.ColumnSpan="2" Width="300" Height="50" VerticalAlignment="Bottom" TextAlignment="Center"/>
+        <TextBlock DataContext="{Binding MessageViewModel}" Text="{Binding Message}" Foreground="Red" Grid.ColumnSpan="2" Width="300" Height="50" VerticalAlignment="Bottom" TextAlignment="Center"/>
         <Button Content="Создать" Grid.ColumnSpan="2" Grid.Column="0" Width="100" Command="{Binding CreateNewPatientCommand}"/>
         <Button Content="Назад" Grid.ColumnSpan="2" Grid.Column="0" Width="100" Margin="0 100 0 0" Style="{StaticResource MaterialDesignFlatButton}" Command="{Binding InformationViewCommand}"/>
     </Grid>
