--- a/PolyclinicApp.WPF/Views/UserControls/DoctorsScheduleView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/DoctorsScheduleView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <DataGrid AutoGenerateColumns="False" ColumnWidth="Auto" ItemsSource="{Binding ScheduleTable}" FontSize="10" IsReadOnly="True">
+        <DataGrid AutoGenerateColumns="False" ColumnWidth="Auto" ItemsSource="{Binding ScheduleTable}" FontSize="10" IsReadOnly="True" CanUserResizeColumns="False" CanUserResizeRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Врач" Binding="{Binding Doctor.FullName}"/>
                 <DataGridTextColumn Header="ПН" Binding="{Binding Monday}"/>
