--- a/PolyclinicApp.WPF/Views/UserControls/NewAppointmentView.xaml
+++ b/PolyclinicApp.WPF/Views/UserControls/NewAppointmentView.xaml
@@ -4,9 +4,51 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PolyclinicApp.WPF.Views.UserControls"
+             xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <Grid>
-            <TextBlock Text="new_appointment"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.4*"/>
+            <ColumnDefinition Width="0.7*"/>
+            <ColumnDefinition Width="1.7*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label
+            Grid.ColumnSpan="3"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top"
+            Content="Новая запись" FontSize="20" />
+
+        <Label Content="Пациент" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <ComboBox IsEditable="True" Width="300" Height="30" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left"
+                  ItemsSource="{Binding PatientsComboBox}" SelectedItem="{Binding SelectedPatient }" DisplayMemberPath="FullName"/>
+
+
+        <Label Content="Лечащий врач" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <ComboBox IsEditable="True" Width="300" Height="30" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Left"
+                  ItemsSource="{Binding DoctorsComboBox}" SelectedItem="{Binding SelectedDoctor}" DisplayMemberPath="FullName"/>
+
+        <Label Content="Описание проблемы" Margin="0 0 10 0" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBox Width="300" Height="100" TextWrapping="Wrap" Grid.Column="2" Grid.Row="3" HorizontalAlignment="Left"
+                 Text="{Binding Disease}" Style="{StaticResource TextBoxPlaceHolder}"/>
+
+        <Label Content="Дата приёма" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <toolkit:DateTimePicker TimePickerShowButtonSpinner="False"
+                                ShowButtonSpinner="False"
+                                Grid.Column="2" Grid.Row="4" 
+                                Width="300" Height="30" 
+                                HorizontalAlignment="Left" 
+                                Format="FullDateTime" FontSize="16" Value="{Binding AppointmentDateTime}"/>
+
+        <TextBlock Grid.Column="0" Grid.Row="4" Grid.RowSpan="2" Grid.ColumnSpan="3" VerticalAlignment="Center" HorizontalAlignment="Center" Text="{Binding ErrorMessage}"/>
+        <Button Grid.ColumnSpan="3" Grid.Column="0" Grid.Row="5" Width="100" Content="Записать" Command="{Binding CreateNewAppointmentCommand}"/>
     </Grid>
 </UserControl>
